--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-dom": "^16.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +28,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
+  }
 }
